--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body{
     text-align: center;
-    background:url("http://pianoartsschool.com/images/gallery/kitten-on-piano-wallpaper.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
+    background:url("https://i.pinimg.com/originals/20/05/59/2005598a9e21e5ea4aa158ad625c5eea.jpg");
+   
+   
     font-family: 'Courgette', cursive;
     
 }
